# beershop

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
example/: config.yaml  makeneworder.py  modifyorder.py
src/beershop/: __init__.py  wsgi.py
src/beershop/api/: routes.py
src/beershop/home/: routes.py
src/beershop/home/static/css/: home.css
src/beershop/home/static/md/: README.md
src/beershop/home/templates/: index.html
src/beershop/tools/: cmd.py
src/beershop/utils/: config.py  db.py  queuehandler.py
tests/: conftest.py  test_api.py  test_db.py
tests/collections/: items.json  orders.json
